meals.css
@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');

body {
    background-color: #ffffff;
    text-align: center;
}

/* navbar */

header {
    background-color: #aad2ba5e ;
}

nav {
    display: flex;
    justify-content: space-between;
    padding: 4px;
    max-width: 1280px;
    margin: auto;
    align-items: center;   
}

nav ul {
    display: flex;
    list-style: none; /* This will remove the dot from the li */
}

a {
    padding: 12px;
    text-decoration: none;
    color: black;
}

.centerNav {
    flex-grow: 2; /* This will push the other ul to the sides */
    display: flex;
    justify-content: center;
    margin-right: 250px;
}

.tasty-table {
    color: #225e4f;
    font-weight: bold;
    font-size: 24px;
    font-family: 'Lobster', cursive;
}

/* CATEGORY PAGE */
/* Meals List */
/* Category section  */
.meal-list-container {
    margin-bottom: 40px;
}

.meal-list-title {
    font-size: 56px;
    max-width: 1280px;
    margin: auto;
    padding: 24px 0px;
    display: flex;
    justify-content: center;
    margin-bottom: 30px;
}

.meal-section {
    max-width: 1280px;
    display: grid;
    margin: auto;
    justify-content: center;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Adjust as needed */
    grid-gap: 80px 30px; /* Adjust as needed */
}

/* Category cards */
.meal-card {
    background-color: #f0f0f0;
    width: 220px;
    height: 330px;
    border-radius: 1.5rem;
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
    margin: auto;
}

.meal-title {
    width: 200px;
    align-self: center;
    font-size: 16px;
}

.meal-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-self: center;
    padding: 4px 32px;
    font-size: 16px;
    max-width: 150px;
    min-width: 60px;
    margin-bottom: 40px;
    margin-top: -12px;
}

.meal-card-img {
    margin-bottom: 12px;
    align-self: center;
    width: 220px; 
    height: 220px; 
    border-radius: 2rem;
}
.meal-card-btn {
    background-color: #BCC7B9;
    padding: 8px;
    border-radius: 1rem;
    color: #ffffff;
    border: none;
    cursor: pointer;
    font-size: 14px;
}


/* RECIPE PAGE */
.recipe-container {
    margin-bottom: 40px;
}

.title-wrapper {
    display: flex;
    justify-content: center;
    margin-top: 40px;
}

.recipe-title {
    font-size: 64px;
}

.recipe-title-container {
    display: flex;
    max-width: 1280px;
    margin: auto;
    flex-direction: column;
    align-items: flex-start;

}
.recipe-category-title {
    margin-bottom: -40px;
    color: #AAD2BA;
}
/* Contains img and instructions */
.recipe-img-container {
    display: flex;
    margin: auto;
    flex-direction: row;
    max-width: 1280px;
    justify-content: center;
}

.recipe-title-img {
    display: flex;
    justify-content: center;
    max-width: 1280px;
    margin: auto;
    flex-direction: row;
    margin-top: 40px;
}

.recipe-img {
    border-radius: 1.5rem;
    width: 50%;
    align-self: center;
}

.ingredients-section {
    margin-right: 40px;
}

.ingredients-title {
    font-size: 44px;
    max-width: 1280px;
    justify-content: center;
    margin: auto;
    margin-top: 36px;
    margin-bottom: 16px;
    color: #235D4D;
}

.ingredients-list {
    max-width: 1280px;
    justify-content: center;
    margin: auto;
    text-align: left;
}

ul {
    list-style-type: none;
  }

.list {
    margin-right: 40px;
    font-size: 20px;
    border-bottom: 4px dashed #AAD2BA;
    padding-bottom: 8px;
    padding-top: 8px;

}
.checkbox {
    padding: 14px;
    margin-right: 20px;
    margin-left: 20px;
}
/* Instruction Section */
.instructions-title {
    font-size: 44px;
    max-width: 1280px;
    justify-content: center;
    margin: auto;
    margin-top: 16px;
    margin-bottom: 16px;
    margin-top: 36px;
    color: #235D4D;
}

.instructions {
    max-width: 1080px;
    justify-content: center;
    margin: auto;
    margin-bottom: 36px;
    font-size: 20px
}

.video {
    max-width: 1280px;
    width: 80%;
    height: 600px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    border-radius: 2rem;
    margin-top: 32px;
}

/* FOOTER */
footer {
    background-color: #aad2ba5e ;
}

.footer-container {
    display: flex;
    max-width: 1280px;
    justify-content: space-between;
    margin: auto;
    align-items: center;
}

.footer-links-container {
    display: flex;
    justify-content: center;
    gap: 20px;
}

.social-icons {
    display: flex;
    gap: 10px;
}

.footer-container-2 {
    display: flex;
    max-width: 1280px;
    justify-content: center;
    margin: auto;
    flex-direction: column;
    font-size: 5px;
    gap: 1px;
}

.built {
    margin-top: -4px;
}

